# src/docs/swagger.yaml
@@ -232,30 +232,6 @@ paths:
               $ref: '#/definitions/db.CompanyPublic'
             type: array
       summary: Gets public companies within a certain distance.
-  /company/distance/{lon}/{lat}:
-    get:
-      parameters:
-      - description: Longitude
-        in: path
-        name: lon
-        required: true
-        type: number
-      - description: Latitude
-        in: path
-        name: lat
-        required: true
-        type: number
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            items:
-              $ref: '#/definitions/db.CompanyPublic'
-            type: array
-      summary: Iteratively searches for companies, starting with 5 kilometers and
-        increasing, until at least 10 companies have been found
   /company/info:
     get:
       produces:
@@ -285,6 +261,30 @@ paths:
         "401":
           description: Unauthorized
       summary: Takes in a company as parameter, looks for password hash in database.
+  /company/search/{lon}/{lat}:
+    get:
+      parameters:
+      - description: Longitude
+        in: path
+        name: lon
+        required: true
+        type: number
+      - description: Latitude
+        in: path
+        name: lat
+        required: true
+        type: number
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/db.CompanyPublic'
+            type: array
+      summary: Iteratively searches for companies, starting with 5 kilometers and
+        increasing, until at least 10 companies have been found
   /company/slots:
     get:
       parameters:
